SERVER-94536 Bypass user write block mode to drop temporary collection at startup (#27215)

GitOrigin-RevId: 90881544baa2a4da45793869f42809e8bd63c16a